--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,19 @@
+.mass{
+  color: red;
+  /*background-color: rgba(255, 0, 0, 0.418);*/
+  text-align: center;
+
+  font-size: 20px;
+}
+
+
+
+
+
+
+
+
+
 
 display-flex, .display-flex, .display-flex-center, .signup-content, .signin-content, .social-login, .socials {
     display: flex;
@@ -294,9 +310,15 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
   
   .signup-image-link {
     font-size: 14px;
-    color: #222;
+    color: white;
     display: block;
-    text-align: center; }
+    text-align: center;
+    background-color: #3b5998;
+    text-decoration: none;
+    padding: 5px;
+    
+   }
+   
   
   .term-service {
     font-size: 13px;
@@ -437,7 +459,11 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
       /* right: 0; */
       font-size: 16px;
       color: green; }
-  
+      .signup-image-link:hover{
+        background-color: rgba(0, 0, 255, 0.342);
+        color: #fff;
+        text-decoration: none;
+      }
   .label-agree-term {
     position: relative;
     top: 0%;
@@ -496,7 +522,14 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
     .socials li:hover a i {
       -webkit-transform: scale(1.3) translateZ(0);
       transform: scale(1.3) translateZ(0); }
-  
+   .forget{
+     text-align: center;
+     color: blue;
+     
+   }
+   .forget:hover{
+     color: gray;
+   }
   .zmdi-facebook {
     background: #3b5998; }
   
@@ -590,4 +623,3 @@ display-flex, .display-flex, .display-flex-center, .signup-content, .signin-cont
       margin-bottom: 10px; } }
   
   /*# sourceMappingURL=style.css.map */
-  
